# qrtcpp

./: .clang-format  CMakeLists.txt  qrcode_stream_sender.cpp
decoder_wasm/: CMakeLists.txt  decoder_wasm.cpp
opencv-js-qrcode/: index.html
web/: index.html
